--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "stylelint-config-recommended-scss",
   "rules": {
+    
     "block-no-empty": true,
     "color-no-invalid-hex": true,
     "comment-empty-line-before": null,
@@ -20,6 +21,7 @@
     "no-descending-specificity": null,
     "scss/selector-no-redundant-nesting-selector": true,
     "scss/no-duplicate-dollar-variables": true,
-    "scss/no-global-function-names": null
+    "scss/no-global-function-names": null,
+    "scss/at-extend-no-missing-placeholder": null
   }
 }
